--- a/clean_air.ipynb
+++ b/clean_air.ipynb
@@ -129,7 +129,7 @@
    ],
    "source": [
     "#get air quality data\n",
-    "air=pd.read_csv('waqi-covid19-airqualitydata-2020.csv')\n",
+    "air=pd.read_csv('Resources/waqi-covid19-airqualitydata-2020.csv')\n",
     "air.head()"
    ]
   },
@@ -142,8 +142,8 @@
     "#only pm25 data\n",
     "pm25=air['Specie']=='pm25'\n",
     "air2=air[pm25]\n",
-    "air2.head()\n",
-    "air2.to_csv('Resources/2020_pm25.csv')"
+    "air2.to_csv('2020_pm25.csv')\n",
+    "air2.head()"
    ]
   },
   {
@@ -242,12 +242,12 @@
    ],
    "source": [
     "#read in json and convert to dataframe and clean up\n",
-    "d=pd.read_json('cities.json')\n",
+    "d=pd.read_json('Resources/cities.json')\n",
     "geo = json_normalize(d['data']) \n",
     "geo = geo.rename(columns={\"Place.geo\": \"Coords\", \"Place.feature\": \"Feature\", \"Place.name\":\"City\",\"Place.country\":\"Country\", \"Place.pop\":\"Pop\"})\n",
     "geo[['Lat','Lon']] = pd.DataFrame(geo.Coords.values.tolist(), index= geo.index)\n",
     "geo = geo[['City','Country','Pop', 'Lat', 'Lon']]\n",
-    "geo.to_csv('Resources/geo_data.csv')\n",
+    "geo.to_csv('geo_data.csv')\n",
     "geo.head()"
    ]
   },
@@ -397,7 +397,7 @@
    "source": [
     "#\n",
     "together = pd.merge(air2,geo)\n",
-    "together.to_csv('Resources/2020_combined.csv')\n",
+    "together.to_csv('2020_combined.csv')\n",
     "together.head()\n"
    ]
   },
