--- a/clean_air.ipynb
+++ b/clean_air.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4   1/3/2020      KG  Bishkek  wind speed     12  0.2  2.5     1.0      4.25"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,9 +135,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Specie</th>\n",
+       "      <th>count</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>median</th>\n",
+       "      <th>variance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>204</td>\n",
+       "      <td>1/9/2020</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>Bishkek</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>22208.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>205</td>\n",
+       "      <td>2/21/2020</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>Bishkek</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>23</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>27144.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>206</td>\n",
+       "      <td>1/8/2020</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>Bishkek</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>9949.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>207</td>\n",
+       "      <td>2/25/2020</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>Bishkek</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>12249.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>208</td>\n",
+       "      <td>2/29/2020</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>Bishkek</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>10091.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date Country     City Specie  count   min    max  median  variance\n",
+       "204   1/9/2020      KG  Bishkek   pm25     24  91.0  262.0   147.0  22208.70\n",
+       "205  2/21/2020      KG  Bishkek   pm25     23  17.0  173.0   154.0  27144.50\n",
+       "206   1/8/2020      KG  Bishkek   pm25     24  68.0  169.0   114.0   9949.78\n",
+       "207  2/25/2020      KG  Bishkek   pm25     24   5.0  137.0    30.0  12249.30\n",
+       "208  2/29/2020      KG  Bishkek   pm25     24  74.0  173.0   132.0  10091.00"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#only pm25 data\n",
     "pm25=air['Specie']=='pm25'\n",
@@ -148,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "metadata": {
     "scrolled": false
    },
@@ -235,7 +346,7 @@
        "4  RÃ¢mnicu VÃ¢lcea      RO  107558  45.10000  24.36667"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -389,13 +500,13 @@
        "4  900000  42.87  74.59  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#\n",
+    "#merge\n",
     "together = pd.merge(air2,geo)\n",
     "together.to_csv('2020_combined.csv')\n",
     "together.head()\n"
