--- a/Clean_Air_Data/Code/clean_air.ipynb
+++ b/Clean_Air_Data/Code/clean_air.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,20 +122,20 @@
        "4   1/3/2020      KG  Bishkek  wind speed     12  0.2  2.5     1.0      4.25"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#get air quality data\n",
-    "air=pd.read_csv('Resources/waqi-covid19-airqualitydata-2020.csv')\n",
+    "air=pd.read_csv('../Resources/waqi-covid19-airqualitydata-2020.csv')\n",
     "air.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "208  2/29/2020      KG  Bishkek   pm25     24  74.0  173.0   132.0  10091.00"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,13 +253,13 @@
     "#only pm25 data\n",
     "pm25=air['Specie']=='pm25'\n",
     "air2=air[pm25]\n",
-    "air2.to_csv('2020_pm25.csv')\n",
+    "air2.to_csv('../2020_pm25.csv')\n",
     "air2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -346,25 +346,25 @@
        "4  RÃ¢mnicu VÃ¢lcea      RO  107558  45.10000  24.36667"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#read in json and convert to dataframe and clean up\n",
-    "d=pd.read_json('Resources/cities.json')\n",
+    "d=pd.read_json('../Resources/cities.json')\n",
     "geo = json_normalize(d['data']) \n",
     "geo = geo.rename(columns={\"Place.geo\": \"Coords\", \"Place.feature\": \"Feature\", \"Place.name\":\"City\",\"Place.country\":\"Country\", \"Place.pop\":\"Pop\"})\n",
     "geo[['Lat','Lon']] = pd.DataFrame(geo.Coords.values.tolist(), index= geo.index)\n",
     "geo = geo[['City','Country','Pop', 'Lat', 'Lon']]\n",
-    "geo.to_csv('geo_data.csv')\n",
+    "geo.to_csv('../geo_data.csv')\n",
     "geo.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -500,7 +500,7 @@
        "4  900000  42.87  74.59  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
    "source": [
     "#merge\n",
     "together = pd.merge(air2,geo)\n",
-    "together.to_csv('2020_combined.csv')\n",
+    "together.to_csv('../2020_combined.csv')\n",
     "together.head()\n"
    ]
   },
