--- a/Clean_Air_Data/Code/clean_air.ipynb
+++ b/Clean_Air_Data/Code/clean_air.ipynb
@@ -356,8 +356,8 @@
     "d=pd.read_json('../Resources/cities.json')\n",
     "geo = json_normalize(d['data']) \n",
     "geo = geo.rename(columns={\"Place.geo\": \"Coords\", \"Place.feature\": \"Feature\", \"Place.name\":\"City\",\"Place.country\":\"Country\", \"Place.pop\":\"Pop\"})\n",
-    "geo[['Lat','Lon']] = pd.DataFrame(geo.Coords.values.tolist(), index= geo.index)\n",
-    "geo = geo[['City','Country','Pop', 'Lat', 'Lon']]\n",
+    "geo[['Lat','Long']] = pd.DataFrame(geo.Coords.values.tolist(), index= geo.index)\n",
+    "geo = geo[['City','Country','Pop', 'Lat', 'Long']]\n",
     "geo.to_csv('../geo_data.csv')\n",
     "geo.head()"
    ]
