--- a/Clean_Air_Data/Code/clean_air.ipynb
+++ b/Clean_Air_Data/Code/clean_air.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -51,78 +51,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2/2/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>13.48</td>\n",
+       "      <td>1/17/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>wind gust</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>323.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>3/3/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>6.05</td>\n",
+       "      <td>1/24/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>wind gust</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>50.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>3/18/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
-       "      <td>wind speed</td>\n",
+       "      <td>2/1/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>wind gust</td>\n",
        "      <td>24</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>13.30</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>269.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>3/26/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
-       "      <td>wind speed</td>\n",
+       "      <td>2/29/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>wind gust</td>\n",
        "      <td>24</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>7.60</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>522.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>1/3/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>12</td>\n",
+       "      <td>1/2/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>wind gust</td>\n",
+       "      <td>19</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.25</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>227.51</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Date Country     City      Specie  count  min  max  median  variance\n",
-       "0   2/2/2020      KG  Bishkek  wind speed     24  0.2  4.6     2.5     13.48\n",
-       "1   3/3/2020      KG  Bishkek  wind speed      2  2.5  3.6     2.5      6.05\n",
-       "2  3/18/2020      KG  Bishkek  wind speed     24  0.5  4.6     3.0     13.30\n",
-       "3  3/26/2020      KG  Bishkek  wind speed     24  0.2  3.6     2.5      7.60\n",
-       "4   1/3/2020      KG  Bishkek  wind speed     12  0.2  2.5     1.0      4.25"
+       "        Date Country      City     Specie  count  min   max  median  variance\n",
+       "0  1/17/2020      PR  San Juan  wind gust     23  0.7  16.5     6.1    323.56\n",
+       "1  1/24/2020      PR  San Juan  wind gust     24  0.2   7.9     1.7     50.12\n",
+       "2   2/1/2020      PR  San Juan  wind gust     24  3.1  17.2     7.5    269.20\n",
+       "3  2/29/2020      PR  San Juan  wind gust     24  1.0  19.8     6.3    522.16\n",
+       "4   1/2/2020      PR  San Juan  wind gust     19  0.2  12.3     4.5    227.51"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -172,79 +172,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>204</td>\n",
-       "      <td>1/9/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>159</td>\n",
+       "      <td>1/4/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
        "      <td>24</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>262.0</td>\n",
-       "      <td>147.0</td>\n",
-       "      <td>22208.70</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1351.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>205</td>\n",
-       "      <td>2/21/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>160</td>\n",
+       "      <td>1/7/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>23</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>154.0</td>\n",
-       "      <td>27144.50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>63.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>206</td>\n",
-       "      <td>1/8/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>161</td>\n",
+       "      <td>2/28/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>169.0</td>\n",
-       "      <td>114.0</td>\n",
-       "      <td>9949.78</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>9862.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>207</td>\n",
-       "      <td>2/25/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>162</td>\n",
+       "      <td>3/3/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>12249.30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>20923.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>208</td>\n",
-       "      <td>2/29/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>163</td>\n",
+       "      <td>3/7/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>10091.00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>44312.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Date Country     City Specie  count   min    max  median  variance\n",
-       "204   1/9/2020      KG  Bishkek   pm25     24  91.0  262.0   147.0  22208.70\n",
-       "205  2/21/2020      KG  Bishkek   pm25     23  17.0  173.0   154.0  27144.50\n",
-       "206   1/8/2020      KG  Bishkek   pm25     24  68.0  169.0   114.0   9949.78\n",
-       "207  2/25/2020      KG  Bishkek   pm25     24   5.0  137.0    30.0  12249.30\n",
-       "208  2/29/2020      KG  Bishkek   pm25     24  74.0  173.0   132.0  10091.00"
+       "          Date Country      City Specie  count   min    max  median  variance\n",
+       "159   1/4/2020      PR  San Juan   pm25     24  15.0   56.0    24.0   1351.23\n",
+       "160   1/7/2020      PR  San Juan   pm25      5  20.0   25.0    22.0     63.00\n",
+       "161  2/28/2020      PR  San Juan   pm25      8   3.0  102.0    43.0   9862.68\n",
+       "162   3/3/2020      PR  San Juan   pm25      5  46.0  158.0    59.0  20923.00\n",
+       "163   3/7/2020      PR  San Juan   pm25      6   3.0  176.0    33.0  44312.00"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -289,7 +289,7 @@
        "      <th>Country</th>\n",
        "      <th>Pop</th>\n",
        "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
+       "      <th>Long</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -338,7 +338,7 @@
        "</div>"
       ],
       "text/plain": [
-       "               City Country     Pop       Lat       Lon\n",
+       "               City Country     Pop       Lat      Long\n",
        "0           Bishkek      KG  900000  42.87000  74.59000\n",
        "1         PloieÅŸti      RO  228851  44.95000  26.01667\n",
        "2           Craiova      RO  304142  44.31667  23.80000\n",
@@ -346,7 +346,7 @@
        "4  RÃ¢mnicu VÃ¢lcea      RO  107558  45.10000  24.36667"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -401,106 +401,106 @@
        "      <th>variance</th>\n",
        "      <th>Pop</th>\n",
        "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
+       "      <th>Long</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1/9/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>1/4/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
        "      <td>24</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>262.0</td>\n",
-       "      <td>147.0</td>\n",
-       "      <td>22208.70</td>\n",
-       "      <td>900000</td>\n",
-       "      <td>42.87</td>\n",
-       "      <td>74.59</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1351.23</td>\n",
+       "      <td>418140</td>\n",
+       "      <td>18.46633</td>\n",
+       "      <td>-66.10572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2/21/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>1/7/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>23</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>154.0</td>\n",
-       "      <td>27144.50</td>\n",
-       "      <td>900000</td>\n",
-       "      <td>42.87</td>\n",
-       "      <td>74.59</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>63.00</td>\n",
+       "      <td>418140</td>\n",
+       "      <td>18.46633</td>\n",
+       "      <td>-66.10572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1/8/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>2/28/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>169.0</td>\n",
-       "      <td>114.0</td>\n",
-       "      <td>9949.78</td>\n",
-       "      <td>900000</td>\n",
-       "      <td>42.87</td>\n",
-       "      <td>74.59</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>9862.68</td>\n",
+       "      <td>418140</td>\n",
+       "      <td>18.46633</td>\n",
+       "      <td>-66.10572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2/25/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>3/3/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>12249.30</td>\n",
-       "      <td>900000</td>\n",
-       "      <td>42.87</td>\n",
-       "      <td>74.59</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>20923.00</td>\n",
+       "      <td>418140</td>\n",
+       "      <td>18.46633</td>\n",
+       "      <td>-66.10572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2/29/2020</td>\n",
-       "      <td>KG</td>\n",
-       "      <td>Bishkek</td>\n",
+       "      <td>3/7/2020</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>San Juan</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>10091.00</td>\n",
-       "      <td>900000</td>\n",
-       "      <td>42.87</td>\n",
-       "      <td>74.59</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>44312.00</td>\n",
+       "      <td>418140</td>\n",
+       "      <td>18.46633</td>\n",
+       "      <td>-66.10572</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Date Country     City Specie  count   min    max  median  variance  \\\n",
-       "0   1/9/2020      KG  Bishkek   pm25     24  91.0  262.0   147.0  22208.70   \n",
-       "1  2/21/2020      KG  Bishkek   pm25     23  17.0  173.0   154.0  27144.50   \n",
-       "2   1/8/2020      KG  Bishkek   pm25     24  68.0  169.0   114.0   9949.78   \n",
-       "3  2/25/2020      KG  Bishkek   pm25     24   5.0  137.0    30.0  12249.30   \n",
-       "4  2/29/2020      KG  Bishkek   pm25     24  74.0  173.0   132.0  10091.00   \n",
+       "        Date Country      City Specie  count   min    max  median  variance  \\\n",
+       "0   1/4/2020      PR  San Juan   pm25     24  15.0   56.0    24.0   1351.23   \n",
+       "1   1/7/2020      PR  San Juan   pm25      5  20.0   25.0    22.0     63.00   \n",
+       "2  2/28/2020      PR  San Juan   pm25      8   3.0  102.0    43.0   9862.68   \n",
+       "3   3/3/2020      PR  San Juan   pm25      5  46.0  158.0    59.0  20923.00   \n",
+       "4   3/7/2020      PR  San Juan   pm25      6   3.0  176.0    33.0  44312.00   \n",
        "\n",
-       "      Pop    Lat    Lon  \n",
-       "0  900000  42.87  74.59  \n",
-       "1  900000  42.87  74.59  \n",
-       "2  900000  42.87  74.59  \n",
-       "3  900000  42.87  74.59  \n",
-       "4  900000  42.87  74.59  "
+       "      Pop       Lat      Long  \n",
+       "0  418140  18.46633 -66.10572  \n",
+       "1  418140  18.46633 -66.10572  \n",
+       "2  418140  18.46633 -66.10572  \n",
+       "3  418140  18.46633 -66.10572  \n",
+       "4  418140  18.46633 -66.10572  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
