--- a/Clean_Air_Data/Code/clean_air.ipynb
+++ b/Clean_Air_Data/Code/clean_air.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -51,78 +51,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1/17/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>wind gust</td>\n",
+       "      <td>2020-01-07</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
+       "      <td>wind speed</td>\n",
        "      <td>23</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>323.56</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>53.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1/24/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>wind gust</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>50.12</td>\n",
+       "      <td>2020-01-27</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
+       "      <td>wind speed</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2/1/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>wind gust</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>269.20</td>\n",
+       "      <td>2020-02-06</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
+       "      <td>wind speed</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>50.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2/29/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>wind gust</td>\n",
-       "      <td>24</td>\n",
+       "      <td>2020-03-15</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
+       "      <td>wind speed</td>\n",
+       "      <td>13</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>19.8</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>522.16</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>19.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>1/2/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>wind gust</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>12.3</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>227.51</td>\n",
+       "      <td>2020-01-06</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
+       "      <td>wind speed</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>15.16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Date Country      City     Specie  count  min   max  median  variance\n",
-       "0  1/17/2020      PR  San Juan  wind gust     23  0.7  16.5     6.1    323.56\n",
-       "1  1/24/2020      PR  San Juan  wind gust     24  0.2   7.9     1.7     50.12\n",
-       "2   2/1/2020      PR  San Juan  wind gust     24  3.1  17.2     7.5    269.20\n",
-       "3  2/29/2020      PR  San Juan  wind gust     24  1.0  19.8     6.3    522.16\n",
-       "4   1/2/2020      PR  San Juan  wind gust     19  0.2  12.3     4.5    227.51"
+       "         Date Country         City      Specie  count  min  max  median  \\\n",
+       "0  2020-01-07      ET  Addis Ababa  wind speed     23  1.0  8.7     4.6   \n",
+       "1  2020-01-27      ET  Addis Ababa  wind speed     11  2.0  5.1     3.0   \n",
+       "2  2020-02-06      ET  Addis Ababa  wind speed     15  1.0  8.2     5.0   \n",
+       "3  2020-03-15      ET  Addis Ababa  wind speed     13  1.0  6.1     3.0   \n",
+       "4  2020-01-06      ET  Addis Ababa  wind speed     17  2.5  7.2     4.6   \n",
+       "\n",
+       "   variance  \n",
+       "0     53.37  \n",
+       "1      7.39  \n",
+       "2     50.14  \n",
+       "3     19.81  \n",
+       "4     15.16  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -172,79 +179,86 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>159</td>\n",
-       "      <td>1/4/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>215</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
        "      <td>24</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1351.23</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>9071.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>160</td>\n",
-       "      <td>1/7/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>216</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>5</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>869.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>217</td>\n",
+       "      <td>2020-02-19</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>6169.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>218</td>\n",
+       "      <td>2020-01-28</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>24</td>\n",
        "      <td>25.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>63.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>161</td>\n",
-       "      <td>2/28/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>pm25</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>102.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>9862.68</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>3661.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>162</td>\n",
-       "      <td>3/3/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>219</td>\n",
+       "      <td>2020-02-04</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>5</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>158.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>20923.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>163</td>\n",
-       "      <td>3/7/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>pm25</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>176.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>44312.00</td>\n",
+       "      <td>24</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>3896.45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Date Country      City Specie  count   min    max  median  variance\n",
-       "159   1/4/2020      PR  San Juan   pm25     24  15.0   56.0    24.0   1351.23\n",
-       "160   1/7/2020      PR  San Juan   pm25      5  20.0   25.0    22.0     63.00\n",
-       "161  2/28/2020      PR  San Juan   pm25      8   3.0  102.0    43.0   9862.68\n",
-       "162   3/3/2020      PR  San Juan   pm25      5  46.0  158.0    59.0  20923.00\n",
-       "163   3/7/2020      PR  San Juan   pm25      6   3.0  176.0    33.0  44312.00"
+       "           Date Country         City Specie  count   min    max  median  \\\n",
+       "215  2020-01-26      ET  Addis Ababa   pm25     24  50.0  156.0    76.0   \n",
+       "216  2020-04-02      ET  Addis Ababa   pm25     24  38.0   80.0    61.0   \n",
+       "217  2020-02-19      ET  Addis Ababa   pm25     24  30.0  139.0    57.0   \n",
+       "218  2020-01-28      ET  Addis Ababa   pm25     24  25.0  102.0    57.0   \n",
+       "219  2020-02-04      ET  Addis Ababa   pm25     24  55.0  142.0    68.0   \n",
+       "\n",
+       "     variance  \n",
+       "215   9071.23  \n",
+       "216    869.55  \n",
+       "217   6169.84  \n",
+       "218   3661.67  \n",
+       "219   3896.45  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -346,7 +360,7 @@
        "4  RÃ¢mnicu VÃ¢lcea      RO  107558  45.10000  24.36667"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -407,100 +421,100 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1/4/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
        "      <td>24</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1351.23</td>\n",
-       "      <td>418140</td>\n",
-       "      <td>18.46633</td>\n",
-       "      <td>-66.10572</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>9071.23</td>\n",
+       "      <td>2757729</td>\n",
+       "      <td>9.02497</td>\n",
+       "      <td>38.74689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1/7/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>5</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>63.00</td>\n",
-       "      <td>418140</td>\n",
-       "      <td>18.46633</td>\n",
-       "      <td>-66.10572</td>\n",
+       "      <td>24</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>869.55</td>\n",
+       "      <td>2757729</td>\n",
+       "      <td>9.02497</td>\n",
+       "      <td>38.74689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2/28/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>2020-02-19</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>9862.68</td>\n",
-       "      <td>418140</td>\n",
-       "      <td>18.46633</td>\n",
-       "      <td>-66.10572</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>6169.84</td>\n",
+       "      <td>2757729</td>\n",
+       "      <td>9.02497</td>\n",
+       "      <td>38.74689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>3/3/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>2020-01-28</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>5</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>158.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>20923.00</td>\n",
-       "      <td>418140</td>\n",
-       "      <td>18.46633</td>\n",
-       "      <td>-66.10572</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>3661.67</td>\n",
+       "      <td>2757729</td>\n",
+       "      <td>9.02497</td>\n",
+       "      <td>38.74689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>3/7/2020</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>San Juan</td>\n",
+       "      <td>2020-02-04</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>Addis Ababa</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>176.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>44312.00</td>\n",
-       "      <td>418140</td>\n",
-       "      <td>18.46633</td>\n",
-       "      <td>-66.10572</td>\n",
+       "      <td>24</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>3896.45</td>\n",
+       "      <td>2757729</td>\n",
+       "      <td>9.02497</td>\n",
+       "      <td>38.74689</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Date Country      City Specie  count   min    max  median  variance  \\\n",
-       "0   1/4/2020      PR  San Juan   pm25     24  15.0   56.0    24.0   1351.23   \n",
-       "1   1/7/2020      PR  San Juan   pm25      5  20.0   25.0    22.0     63.00   \n",
-       "2  2/28/2020      PR  San Juan   pm25      8   3.0  102.0    43.0   9862.68   \n",
-       "3   3/3/2020      PR  San Juan   pm25      5  46.0  158.0    59.0  20923.00   \n",
-       "4   3/7/2020      PR  San Juan   pm25      6   3.0  176.0    33.0  44312.00   \n",
+       "         Date Country         City Specie  count   min    max  median  \\\n",
+       "0  2020-01-26      ET  Addis Ababa   pm25     24  50.0  156.0    76.0   \n",
+       "1  2020-04-02      ET  Addis Ababa   pm25     24  38.0   80.0    61.0   \n",
+       "2  2020-02-19      ET  Addis Ababa   pm25     24  30.0  139.0    57.0   \n",
+       "3  2020-01-28      ET  Addis Ababa   pm25     24  25.0  102.0    57.0   \n",
+       "4  2020-02-04      ET  Addis Ababa   pm25     24  55.0  142.0    68.0   \n",
        "\n",
-       "      Pop       Lat      Long  \n",
-       "0  418140  18.46633 -66.10572  \n",
-       "1  418140  18.46633 -66.10572  \n",
-       "2  418140  18.46633 -66.10572  \n",
-       "3  418140  18.46633 -66.10572  \n",
-       "4  418140  18.46633 -66.10572  "
+       "   variance      Pop      Lat      Long  \n",
+       "0   9071.23  2757729  9.02497  38.74689  \n",
+       "1    869.55  2757729  9.02497  38.74689  \n",
+       "2   6169.84  2757729  9.02497  38.74689  \n",
+       "3   3661.67  2757729  9.02497  38.74689  \n",
+       "4   3896.45  2757729  9.02497  38.74689  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
